# cicd

./: .models_and_datasets_to_be_skipped.csv  cli.py  giskard_action.yaml  models_tabular-classification.parquet  models_text-classification.parquet  pyproject.toml  readme.md  retriever.py  scan_config_template.yaml  scan_retrieved.py  setup.cfg
.github/workflows/: giskard_action.yaml
automation/: __init__.py  post_discussion.py  post_results_to_dataset.py  utils.py
examples/github/: cicd_config.yaml  model.pkl  my_github_loader.py  readme.md  requirements.txt  titanic_test_data.csv  train.py
examples/github/artifacts/dataset/: data.csv.zst  data.sample.csv.zst  giskard-dataset-meta.yaml
examples/github/artifacts/model/: giskard-model-meta.yaml  model.pkl
giskard_cicd/: __init__.py  cli.py  giskard_action.yaml  utils.py
giskard_cicd/automation/: __init__.py  hf_api.py  post_discussion.py  post_results_to_dataset.py  utils.py
giskard_cicd/loaders/: __init__.py  base_loader.py  github_loader.py  huggingface_inf_model.py  huggingface_loader.py  tabular_classification_pipeline.py  tabular_loader.py  tabular_pipeline.py  tabular_regression_pipeline.py
giskard_cicd/persistent/: __init__.py  s3_utils.py
giskard_cicd/pipeline/: runner.py  scan_config.yaml
