[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
giskard_evaluator = "cli"

[project]
name = "giskard_cicd"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "datasets",
    "giskard >= 2.1.0",
    "huggingface_hub",
    "torch",
    "transformers",
]
requires-python = ">=3.9"
