[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
giskard_scanner = "giskard_cicd.cli:main"

[project]
name = "giskard_cicd"
version = "0.2.0"
readme = "README.md"
dependencies = [
    "datasets",
    "giskard >= 2.3.0",
    "huggingface_hub",
    "torch",
    "transformers",
]
requires-python = ">=3.9"
